--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,9 @@
-.app{
+.app {
   background-color: white;
-  color: black;
-  width: 90;
-  height: 90vh;
+  height: 100vh;
   margin: 0;
   padding: 0;
+  font-family: "montserrat", sans-serif;
 }
 
-h1{
-  font-family: 'righteous', sans-serif; 
-}
+
