--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --color-primary: #74b9ff;
+    --color-secondary: #0984e3;
+    --color-third: rgba(253, 203, 110, 1.0);
+    --color-background-main: #f7f7f7;
+    --color-background-secondary: #2d3436;
+    --color-text-main: rgba(45, 52, 54, 1.0);
+    --color-text-secondary: #f7f7f7;
+    --color-text-danger: rgba(214, 48, 49, 1.0);
+  }
+  p {
+    font-family: "montserrat", sans-serif;
+  }
