--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -1,3 +1,85 @@
-p{
-    font-family: 'righteous', sans-serif; 
+p {
+  font-family: "righteous", sans-serif;
 }
+
+.main {
+  background-color: var(--color-background-secondary);
+  height: 100%;
+}
+
+.login {
+  height: 80%;
+  width: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  height: 100px;
+  margin-top: 35%;
+  width: 150px;
+  background-image: url("../assets/google-tasks-venez-a-bout-de-toutes-vos-taches-er4IE9-removebg-preview.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+}
+
+.forgot {
+  width: 65%;
+  text-align: right;
+  color: rgba(255, 255, 255, 0.445);
+  width: 100%;
+}
+
+.forms {
+  height: 60%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.titreLogin {
+  font-size: 2.3em;
+  color: rgba(255, 255, 255, 0.849);
+  font-family: "righteous";
+}
+
+.input {
+  color: rgba(255, 255, 255, 0.849);
+}
+
+.btn {
+  background-color: var(--color-secondary);
+  color: rgba(255, 255, 255, 0.849);
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-radius: 5px;
+  transition: all 0.5s ease-in-out;
+  font-weight: bold;
+}
+
+.btn:hover {
+  border-radius: 20px;
+}
+
+.forgot {
+  color: gray;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+
+}
+
+.forgot:hover{
+    color: rgba(255, 255, 255, 0.849);
+
+}
+
