--- a/src/styles/GestionUserPage.css
+++ b/src/styles/GestionUserPage.css
@@ -136,3 +136,53 @@
   background-color: white;
   color: black;
 }
+
+.ListMembresList {
+  height: 400px;
+  border-radius: 10px;
+  border: 2px solid rgba(128, 128, 128, 0.308);
+}
+
+.headList {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-bottom: 2px solid rgba(128, 128, 128, 0.308);
+  height: 50px;
+}
+
+.BodyList {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-bottom: 2px solid rgba(128, 128, 128, 0.308);
+  height: 50px;
+}
+
+.bodyValue{
+  height: 80%;
+  font-weight: 500;
+  overflow-y: scroll;
+}
+
+
+.nomList{
+  width: 30%;
+}
+
+.adresseList{
+  width: 30%;
+
+}
+.posteList{
+  width: 20%;
+
+}
+
+.deleteList{
+  width: 10%;
+  text-align: center;
+
+}
