--- a/src/styles/GestionUserPage.css
+++ b/src/styles/GestionUserPage.css
@@ -47,6 +47,9 @@
   .labelBTN {
     display: none;
   }
+  .BodyList{
+    font-size: 10px;
+  }
   .posteList{
     display: none;
   }
@@ -163,7 +166,7 @@
   justify-content: space-around;
   align-items: center;
   border-bottom: 2px solid rgba(128, 128, 128, 0.308);
-  height: 50px;
+  height: 40px;
 }
 
 .bodyValue{
