--- a/src/styles/MyprojectPage.css
+++ b/src/styles/MyprojectPage.css
@@ -21,7 +21,7 @@
 
 .BodyMyProject {
   display: flex;
-  height: 8%;
+  height: 20%;
   align-items: center;
   justify-content: space-between;
   border-bottom: 2px solid rgba(128, 128, 128, 0.185);
@@ -33,9 +33,16 @@ li {
 
 .Statut,
 .Priorite,
-.Date {
+.Date,
+.Statuts,
+.Priorites {
   width: 15%;
   padding-left: 20px;
+}
+
+.fait{
+  width: 10%;
+  
 }
 
 .Pris {
@@ -51,7 +58,7 @@ li {
 }
 
 .LISTE {
-  height: 85%;
+  height: 30%;
   overflow-y: scroll;
 }
 
@@ -68,9 +75,34 @@ li {
   .Priorite{
     width: 20%;
   }
+  .Statuts, .Priorites{
+    display: none;
+  }
+  .Titres{
+    width: 40%;
+  }
+
+  .fait{
+    width: 30%;
+  }
 
 }
 
-.red-icon {
-  color: red;
+.iconeDone{
+  color: rgba(17, 209, 17, 0.979);
+  cursor: pointer;
+}
+
+.red-icon, .retirerIcone {
+  color: rgba(255, 0, 0, 0.637);
+}
+
+.retirerIcone{
+  cursor: pointer;
+}
+
+.mycreate{
+  font-weight: bold;
+  border-bottom: 2px solid rgba(128, 128, 128, 0.185);
+
 }
