--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -20,12 +20,14 @@
   z-index: 12;
 }
 
+
+
 .formModalCreatePost {
   width: 600px;
   margin: 50px auto;
   background: var(--color-background-main);
   padding: 35px;
-  margin-top: 10%;
+  margin-top: 5%;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   z-index: 12;
@@ -89,11 +91,25 @@
   .formModal {
     width: 300px;
   }
+
+  .label {
+    font-size: 12px;
+  }
+  .addInputField {
+    font-size: 12px;
+    background-color: blue;
+  }
+  .input {
+    font-size: 12px;
+  }
+  .faTrashIcon {
+    width: 10px;
+  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 650px) {
   .formModalCreatePost {
-    width: 300px;
+    width: 350px;
   }
   .faSquarePlus {
     display: none;
@@ -125,6 +141,13 @@
   flex-wrap: wrap;
 }
 
+.sections {
+  display: flex;
+  flex-wrap: wrap;
+  max-height: 200px;
+  overflow-y: scroll;
+}
+
 .label {
   width: 40vw;
   display: flex;
@@ -135,4 +158,9 @@
   width: 60vw;
   display: flex;
   flex-direction: row;
+}
+
+
+.isDropdownOpen{
+  background-color: red;
 }
