--- a/src/styles/MyprojectPage.css
+++ b/src/styles/MyprojectPage.css
@@ -27,17 +27,23 @@
   border-bottom: 2px solid rgba(128, 128, 128, 0.185);
 }
 
+.BodyProject {
+  display: flex;
+  height: 8%;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid rgba(128, 128, 128, 0.185);
+}
+
 li {
   list-style: none;
 }
 
-.Statut,
-.Priorite,
+
 .Date,
 .Statuts,
-.Priorites {
-  width: 15%;
-  padding-left: 20px;
+.Priorite {
+  width: 20%;
 }
 
 .fait{
@@ -50,7 +56,7 @@ li {
 }
 
 .Titres {
-  width: 30%;
+  width: 20%;
 }
 
 .more {
@@ -62,13 +68,16 @@ li {
   overflow-y: scroll;
 }
 
+.LISTES {
+  height: 85%;
+  overflow-y: scroll;
+}
+
 @media screen and (max-width: 768px) {
   .Pris {
     display: none;
   }
-  .Date {
-    display: none;
-  }
+ 
   .more {
     width: 10%;
   }
@@ -80,6 +89,8 @@ li {
   }
   .Titres{
     width: 40%;
+    margin-left: 10px;
+
   }
 
   .fait{
