--- a/src/styles/MyprojectPage.css
+++ b/src/styles/MyprojectPage.css
@@ -46,6 +46,11 @@ li {
   width: 20%;
 }
 
+.Dates, .Priorites{
+  width: 30%;
+
+}
+
 .fait{
   width: 10%;
   
@@ -56,7 +61,7 @@ li {
 }
 
 .Titres {
-  width: 20%;
+  width: 30%;
 }
 
 .more {
