--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -20,14 +20,12 @@
   z-index: 12;
 }
 
-
-
 .formModalCreatePost {
   width: 600px;
   margin: 50px auto;
   background: var(--color-background-main);
   padding: 35px;
-  margin-top: 5%;
+  margin-top: 10%;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   z-index: 12;
@@ -160,7 +158,43 @@
   flex-direction: row;
 }
 
-
-.isDropdownOpen{
+.isDropdownOpen {
   background-color: red;
+}
+
+.modalInput {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 18;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 500px;
+}
+
+.tab {
+  border-bottom: 3px solid transparent;
+  transition: border-color 0.3s ease;
+}
+
+.tab.active {
+  border-bottom: 3px solid var(--color-third);
+}
+
+.tab:hover {
+  border-bottom: 3px solid var(--color-third);
+}
+
+.taskContentList {
+  max-height: 350px;
 }
