--- a/src/styles/SetProject.css
+++ b/src/styles/SetProject.css
@@ -1,7 +1,7 @@
 .showModals {
   position: fixed;
   top: 0;
-  z-index: 6;
+  z-index: 99;
   width: 100%;
   height: 100%;
   background: rgba(43, 38, 38, 0.53);
@@ -40,21 +40,19 @@
   width: 50%;
 }
 @media screen and (max-width: 650px) {
-  .formModalCreatePosts, .ListMembres {
+  .formModalCreatePosts,
+  .ListMembres {
     width: 350px;
   }
-  .titreListemembres{
+  .titreListemembres {
     font-size: 16px;
-
   }
-  .onemembres{
+  .onemembres {
     width: 90%;
   }
-
 }
 
-.heightListMembres{
+.heightListMembres {
   height: 80%;
   overflow-y: scroll;
 }
-
